// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoliciesApi deletePolicy() 1: Delete existing policy [FrodoTestPolicy4] 1`] = `
{
  "_id": "FrodoTestPolicy4",
  "_rev": "0",
}
`;

exports[`PoliciesApi deletePolicy() 2: Delete non-existing policy [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Policy DoesNotExist does not exist.",
  "reason": "Not Found",
}
`;

exports[`PoliciesApi getPolicies() 1: Get all policies 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "_id": "Test Policy",
      "_rev": "1695912902746",
      "actionValues": {
        "GET": true,
        "POST": false,
      },
      "active": false,
      "applicationName": "test-policy-set",
      "condition": {
        "endDate": "2023:08:02",
        "endDay": "fri",
        "endTime": "11:59",
        "enforcementTimeZone": "GMT",
        "startDate": "2023:08:01",
        "startDay": "mon",
        "startTime": "12:00",
        "type": "SimpleTime",
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-28T14:55:02.746Z",
      "description": "Test Policy Description",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-28T14:55:02.746Z",
      "name": "Test Policy",
      "resourceAttributes": [
        {
          "propertyName": "Test_Name",
          "propertyValues": [
            "Test_Value",
          ],
          "type": "Static",
        },
      ],
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "lorem://ipsum:dolor/sit",
      ],
      "subject": {
        "type": "NONE",
      },
    },
    {
      "_id": "FeatureStorePolicy",
      "_rev": "1695913101552",
      "actionValues": {},
      "active": true,
      "applicationName": "FeatureStorePolicySet",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-28T14:58:21.552Z",
      "description": "FeatureStorePolicy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-28T14:58:21.552Z",
      "name": "FeatureStorePolicy",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "https://www.example.com:443/*",
      ],
      "subject": {
        "type": "NONE",
      },
    },
    {
      "_id": "FrodoTestPolicy1",
      "_rev": "1696104760019",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.19Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.19Z",
      "name": "FrodoTestPolicy1",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy2",
      "_rev": "1696104760154",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.154Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.154Z",
      "name": "FrodoTestPolicy2",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy4",
      "_rev": "1696104760345",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.345Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.345Z",
      "name": "FrodoTestPolicy4",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
  ],
  "resultCount": 5,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPoliciesByPolicySet() 1: Get policies in existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "_id": "FrodoTestPolicy1",
      "_rev": "1696104760019",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.19Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.19Z",
      "name": "FrodoTestPolicy1",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy2",
      "_rev": "1696104760154",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.154Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.154Z",
      "name": "FrodoTestPolicy2",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy4",
      "_rev": "1696104760345",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-30T20:12:40.345Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-30T20:12:40.345Z",
      "name": "FrodoTestPolicy4",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
  ],
  "resultCount": 3,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPoliciesByPolicySet() 2: Get policies in non-existing policy set [DoesNotExist] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [],
  "resultCount": 0,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPolicy() 1: Get existing policy [FrodoTestPolicy1] 1`] = `
{
  "_id": "FrodoTestPolicy1",
  "_rev": "1696104760019",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": "2023-09-30T20:12:40.19Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": "2023-09-30T20:12:40.19Z",
  "name": "FrodoTestPolicy1",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;

exports[`PoliciesApi getPolicy() 2: Get non-existing policy [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Policy DoesNotExist does not exist.",
  "reason": "Not Found",
}
`;

exports[`PoliciesApi putPolicy() 1: Update existing policy [FrodoTestPolicy2] 1`] = `
{
  "_id": "FrodoTestPolicy2",
  "_rev": "1696104760824",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": "2023-09-30T20:12:40.154Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": "2023-09-30T20:12:40.824Z",
  "name": "FrodoTestPolicy2",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;

exports[`PoliciesApi putPolicy() 2: Create non-existing policy [FrodoTestPolicy3] 1`] = `
{
  "_id": "FrodoTestPolicy3",
  "_rev": "1696104760917",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": "2023-09-30T20:12:40.917Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": "2023-09-30T20:12:40.917Z",
  "name": "FrodoTestPolicy3",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;
